tests/invalid_Programs/type-checker/not_integer.kln
function main():integer
    not 1
